# hayulo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  PROJECT_CHARTER.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  hayulo.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  queue_item.yml
.github/workflows/: ci.yml
benchmarks/llm/baselines/: hayulo.toml
benchmarks/llm/runs/: README.md
benchmarks/llm/tasks/: inventory_api.json  reading_list_api.json  support_ticket_api.json  todo_crud_api.json  webhook_receiver_api.json
docs/: INDEX.md  ai_native_design.md  ambitions.md  ci.md  compatibility.md  compiler_and_toolchain.md  contributor_handbook.md  design_principles.md  detailed_roadmap.md  development_loop.md  diagnostics.md  ecosystem.md  ecosystem_plan.md  editor_support.md  faq.md  issue_queue.md  language_design_principles.md  launch_plan.md  llm_benchmarks.md  migration_2_0.md  migration_policy.md  open_source_governance.md  philosophy.md  product_strategy.md  project_system.md  public_alpha.md  public_pitch.md  release_checklist.md  repair_benchmarks.md  research_agenda.md  rest_api_mvp.md  safety_and_trust.md  stable_contract_1_0.md  standard_library_core.md  standard_library_plan.md  syntax_rulebook.md  syntax_subset.md  technical_plan.md  vision.md  whitepaper.md
editors/: hayulo.tmLanguage.json
examples/: data_core.hayulo  future_todo_api.hayulo  hello.hayulo  math.hayulo
examples/todo_api/: AGENTS.md  CLAUDE.md  main.hayulo
my-app/: hayulo.toml
my-app/src/: main.hayulo
my-app/tests/: main_test.hayulo
src/hayulo/: __init__.py  api.py  ast.py  benchmarks.py  checker.py  cli.py  diagnostics.py  formatter.py  intent.py  interpreter.py  lexer.py  parser.py  project.py
tests/: test_api_build.py  test_cli_snapshots.py  test_core_language.py  test_formatter_and_repair.py  test_interpreter.py  test_llm_benchmarks.py  test_permissions.py  test_project_system.py  test_public_alpha_docs.py  test_stable_contract.py  test_static_checker.py
tests/fixtures/: api_error.hayulo  failing_test.hayulo  formatted.hayulo  old_assignment.hayulo  old_db_route_body.hayulo  old_inline_constraints.hayulo  old_postfix_try.hayulo  runtime_error.hayulo  syntax_error.hayulo  unformatted.hayulo
tests/repair_fixtures/: bad_arity.hayulo  bad_record_field.hayulo  unknown_name.hayulo
tests/snapshots/: api_build_error.json  missing_file.json  old_assignment.json  old_db_route_body.json  old_inline_constraints.json  old_postfix_try.json  runtime_error.json  script_syntax_error.json
(+5 files in other folders)
