[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hayulo-lang-prototype"
version = "0.2.0"
description = "Pre-alpha Hayulo prototype: an AI-friendly language/toolchain for scripts and REST API generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hayulo contributors" }
]
keywords = ["programming-language", "compiler", "interpreter", "rest-api", "ai", "llm"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers"
]

dependencies = []

[project.scripts]
hayulo = "hayulo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
