[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hayulo-lang-prototype"
version = "2.0.0a0"
description = "Hayulo 2.0 draft: an AI-friendly language/toolchain for scripts and declarative REST API generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hayulo contributors" }
]
keywords = ["programming-language", "compiler", "interpreter", "rest-api", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers"
]

dependencies = []

[project.scripts]
hayulo = "hayulo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
